# chuev-commander

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: actions.rs  app.rs  editor.rs  events.rs  main.rs  menu.rs  ops.rs  platform.rs  shell.rs  theme.rs
src/ui/: cmdline.rs  menu.rs  mod.rs  output.rs  panels.rs  popups.rs  status.rs
src/vfs/: archive.rs  local.rs  mod.rs  router.rs
